Fix for broken css reference on guidelines visual system page.

--- a/docs/template/public/kss.less
+++ b/docs/template/public/kss.less
@@ -757,7 +757,7 @@ body.has-left-nav .sidebar-nav {
         }
     }
 }
-#visual-system {
+.visual-system {
     /* font-size */
 
     .size-26 {
@@ -774,6 +774,7 @@ body.has-left-nav .sidebar-nav {
             1px -1px 0 #cfd8e3,
             -1px 1px 0 #cfd8e3,
             1px 1px 0 #cfd8e3;
+            font-size: 30px;
         }
         p {
             position: absolute;
